discussion/kv_engine/179675/179675_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Migrate to waitForPredicate from platform

waitForPredicate() et al have been added to platform so they can be
more widely used. Update all uses of waitForPredicate and
decayingSleep to use the new cb:: namespaced one, simplifying code
where possible to use waitForPredicate() instead of manually calling
decayingSleep.

Change-Id: I77631bfa7d69c43e1baaaaaecaaad9484410b637

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-07 13:20:07.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-07 13:32:06.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19332/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/dcp_stream_test.cc b/engines/ep/tests/module_tests/dcp_stream_test.cc
index 7a3e2bf7a..e5afd7109 100644
--- a/engines/ep/tests/module_tests/dcp_stream_test.cc
+++ b/engines/ep/tests/module_tests/dcp_stream_test.cc
@@ -981,7 +981,8 @@ TEST_P(StreamTest, MB_32329CursorDroppingResetCursor) {
        complete/cancel itself */
     ExecutorPool::get()-&gt;setNumAuxIO(1);
     /* Finish up with the backilling of the remaining item */
-    cb::waitForPredicate([&amp;] { return numItems == stream-&gt;getLastReadSeqno(); });
+    cb::waitForPredicate(
+            [&amp;] { return numItems == stream-&gt;getLastReadSeqno(); });
     EXPECT_EQ(cb::engine_errc::no_such_key, destroy_dcp_stream());
 }
 

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19332/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20111/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_sync_repl_test.cc:564:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate([&] { return stream->public_readyQSize() == 1 + 1; });
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_sync_repl_test.cc:655:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate([&] { return stream->public_readyQSize() == 2; });
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_sync_repl_test.cc:745:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate([&] { return stream->public_readyQSize() == 1 + 1; });
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:799:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:848:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate([&] { return stream->isDead(); });
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:882:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:886:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate([&] { return stream->getNumBackfillPauses() != 0; });
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:898:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:931:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:984:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate([&] { return numItems == stream->getLastReadSeqno(); });
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:247:9: error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
    cb::waitForPredicate(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:1914:16: error: no member named "waitForPredicateUntil" in namespace "cb" [clang-diagnostic-error]
    return cb::waitForPredicateUntil(
               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20111/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20111/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49073/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(799): error C2039: "waitForPredicate": is not a member of "cb" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49073/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9909/ : FAILURE

Compile error at [2022-09-07T13:27:58.666Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9909/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9811/ : FAILURE

Compile error at [2022-09-07T13:27:01.515Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9811/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22075/ : FAILURE

Compile error at [2022-09-07T13:23:28.022Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22075/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22431/ : FAILURE

Compile error at [2022-09-07T13:25:54.746Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22431/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30467/ : FAILURE

Compile error at [2022-09-07T13:25:31.279Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30467/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23175/ : FAILURE

Compile error at [2022-09-07T13:21:53.987Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23175/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21403/ : FAILURE

Compile error at [2022-09-07T13:28:08.640Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:247:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21403/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41254/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
